--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Assets/styles/main.css" />
 </head>
 <body>
+    <audio src="Assets/music.mp3" autoplay loop></audio>
     
     <header>
 
@@ -79,9 +80,6 @@
 >
         طراح و سازنده: امیررضا همتی                 |
 </p>
-
-
-<audio src="Assets/music.mp3" autoplay loop"></audio>
 
 <div class="d-none element">
     <p
