--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Assets/styles/main.css" />
 </head>
 <body>
-    <audio src="Assets/music.mp3" controls autoplay loop></audio>
+    <audio src="Assets/music.mp3" id="audio" loop></audio>
     
     <header>
 
@@ -100,6 +100,8 @@
 <script src="Assets/scripts/jquery.min.js"></script>
 <script src="Assets/scripts/jquery.animateTyping.js"></script>
 <script>
+    const audio = document.getElementById("audio").play();
+
     const pTag = document.querySelectorAll("p");
 
     let timeScroll;
